--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NightWatch examples for TestingBot",
   "main": "",
   "scripts": {
-    "test": "./node_modules/.bin/nightwatch -e chrome,firefox,internet_explorer_edge tests"
+    "test": "./node_modules/.bin/nightwatch -e chrome,internet_explorer_edge tests"
   },
   "devDependencies": {
     "testingbot-api": "1.0.5",
