--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,4 @@ jobs:
         with:
           node-version: '22.x'
       - run: npm ci
-      - run: npm run build --if-present
-      - run: npm single
+      - run: npm test
